small fixes, some more spacing

--- a/src/app.css
+++ b/src/app.css
@@ -14,7 +14,7 @@
 		--color-secondary: 30 24 32;
 		--color-secondary-light: 229 231 235;
 
-		--color-accent: 162 136 166;
+		--color-accent: 114 71 184;
 		--color-accent-light: 168 145 172;
 
 		--box-shadow: rgba(149, 157, 165, 0.2) 0px 1px 10px;
